--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "types": ["jest", "node", "@testing-library/jest-dom"],
     "paths": {
