--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -48,27 +48,22 @@ jobs:
             const fs = require('fs');
             const results = JSON.parse(fs.readFileSync("/home/runner/work/admin-2/admin-2/lhci_reports/manifest.json"));
             let comments = "";
-      
+
             results.forEach((result) => {
               const { summary, jsonPath } = result;
               const details = JSON.parse(fs.readFileSync(jsonPath));
               const { audits } = details;
               const formatResult = (res) => Math.round(res * 100);
-      
+
               Object.keys(summary).forEach(
                 (key) => (summary[key] = formatResult(summary[key]))
               );
-      
+
               const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
-      
-              const comment = [
-                `⚡️ Lighthouse report!`,
-                `| Category | Performance | First Contentful Paint | Speed Index | Time to Interactive | Total Blocking Time | Largest Contentful Paint | Cumulative Layout Shift |`,
-                `| --- | --- | --- | --- | --- | --- | --- | --- |`,
-                `| ${score(summary.performance)} Performance | ${summary.performance} | ${score(audits["first-contentful-paint"].score * 100)} ${audits["first-contentful-paint"].displayValue} | ${score(audits["speed-index"].score * 100)} ${audits["speed-index"].displayValue} | ${score(audits["interactive"].score * 100)} ${audits["interactive"].displayValue} | ${score(audits["total-blocking-time"].score * 100)} ${audits["total-blocking-time"].displayValue} | ${score(audits["largest-contentful-paint"].score * 100)} ${audits["largest-contentful-paint"].displayValue} | ${score(audits["cumulative-layout-shift"].score * 100)} ${audits["cumulative-layout-shift"].displayValue} |`,
-              ].join("\n");
-      
-              comments += comment + "\n";
+
+              comments += `| Category | Performance | First Contentful Paint | Speed Index | Time to Interactive | Total Blocking Time | Largest Contentful Paint | Cumulative Layout Shift |\n`;
+              comments += `| --- | --- | --- | --- | --- | --- | --- | --- |\n`;
+              comments += `| ${score(summary.performance)} Performance | ${summary.performance} | ${score(audits["first-contentful-paint"].score * 100)} ${audits["first-contentful-paint"].displayValue} | ${score(audits["speed-index"].score * 100)} ${audits["speed-index"].displayValue} | ${score(audits["interactive"].score * 100)} ${audits["interactive"].displayValue} | ${score(audits["total-blocking-time"].score * 100)} ${audits["total-blocking-time"].displayValue} | ${score(audits["largest-contentful-paint"].score * 100)} ${audits["largest-contentful-paint"].displayValue} | ${score(audits["cumulative-layout-shift"].score * 100)} ${audits["cumulative-layout-shift"].displayValue} |\n`;
             });
 
             core.setOutput('comments', comments)
