fix: production dependency만 설치로 변경

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install packages
         run: |
-          yarn install
+          yarn install --production
 
       - name: Build
         run: |
