fix: 의존성 충돌 무시

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install packages
         run: |
-          yarn install --production
+          yarn install --production --ignore-engines
 
       - name: Build
         run: |
