--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@chromatic-com/playwright": "^0.10.1",
     "@chromatic-com/storybook": "3.2.2",
     "@eslint/js": "^9.13.0",
     "@playwright/test": "^1.49.0",
