--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-bundle-visualizer": "^1.2.1"
   },
   "eslintConfig": {
     "extends": [
