--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
-    "vite-bundle-visualizer": "^1.2.1"
+    "vite-bundle-visualizer": "^1.2.1",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "eslintConfig": {
     "extends": [
